src/objects/Related_Alliance_Partner_Info__c.object
<CustomObject>
    <fields>
        <fullName>Alliance_Partner_1_Contribution__c</fullName>
        <inlineHelpText>Enter the actual amount contributed by the partner for this activity</inlineHelpText>
        <label>Alliance Partner Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Alliance Partners Info</relationshipLabel>
        <relationshipName>Related_Alliance_Partners_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Contact_Email__c</fullName>
        <label>Alliance Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Contact_Name__c</fullName>
        <label>Alliance Partner Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Contact_Phone__c</fullName>
        <label>Alliance Partner Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Needs_to_Pay_Nimble__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox to indicate if the alliance partner needs to pay Nimble for this activity</inlineHelpText>
        <label>Alliance Partner Needs to Pay Nimble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Payment_Due_Date__c</fullName>
        <inlineHelpText>Alliance Partner is expected to pay Nimble any amount owed for the joint activity by this date</inlineHelpText>
        <label>Alliance Partner Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Alliance Partners Info</relationshipLabel>
        <relationshipName>Related_Alliance_Partners_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Related Alliance Partner Info</label>
    <nameField>
        <displayFormat>RAP-{000000}</displayFormat>
        <label>Related Alliance Partner Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Alliance Partners Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>